projekt/kubernetes/frontend/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: frontend.example.com
    http:
      paths:
      - path: "/test"
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
